--- a/ruoyi-aucper/pom.xml
+++ b/ruoyi-aucper/pom.xml
@@ -22,6 +22,11 @@
             <groupId>com.ruoyi</groupId>
             <artifactId>ruoyi-common</artifactId>
         </dependency>
+        <dependency>
+		    <groupId>com.codeborne</groupId>
+		    <artifactId>selenide</artifactId>
+		    <version>6.3.0</version>
+		</dependency>
 
     </dependencies>
 
