--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.8</java.version>
-        <maven-jar-plugin.version>3.1.1</maven-jar-plugin.version>
+<!--         <maven-jar-plugin.version>3.1.1</maven-jar-plugin.version> -->
         <druid.version>1.2.8</druid.version>
         <bitwalker.version>1.21</bitwalker.version>
         <swagger.version>3.0.0</swagger.version>
@@ -33,6 +33,7 @@
         <poi.version>4.1.2</poi.version>
         <velocity.version>2.3</velocity.version>
         <jwt.version>0.9.1</jwt.version>
+	    <selenium.version>3.141.59</selenium.version>
     </properties>
 
     <!-- 依赖声明 -->
@@ -199,6 +200,68 @@
                 <version>${ruoyi.version}</version>
             </dependency>
 
+            <!-- Aucper-->
+            <dependency>
+                <groupId>com.ruoyi</groupId>
+                <artifactId>ruoyi-aucper</artifactId>
+                <version>${ruoyi.version}</version>
+            </dependency>
+
+			<dependency>
+			  <groupId>org.seleniumhq.selenium</groupId>
+			  <artifactId>selenium-api</artifactId>
+			  <version>${selenium.version}</version>
+			</dependency>
+			<dependency>
+			  <groupId>org.seleniumhq.selenium</groupId>
+			  <artifactId>selenium-chrome-driver</artifactId>
+			  <version>${selenium.version}</version>
+			</dependency>
+			<dependency>
+			  <groupId>org.seleniumhq.selenium</groupId>
+			  <artifactId>selenium-edge-driver</artifactId>
+			  <version>${selenium.version}</version>
+			</dependency>
+			<dependency>
+			  <groupId>org.seleniumhq.selenium</groupId>
+			  <artifactId>selenium-firefox-driver</artifactId>
+			  <version>${selenium.version}</version>
+			</dependency>
+			<dependency>
+			  <groupId>org.seleniumhq.selenium</groupId>
+			  <artifactId>selenium-ie-driver</artifactId>
+			  <version>${selenium.version}</version>
+			</dependency>
+			<dependency>
+			  <groupId>org.seleniumhq.selenium</groupId>
+			  <artifactId>selenium-java</artifactId>
+			  <version>${selenium.version}</version>
+			</dependency>
+			<dependency>
+			  <groupId>org.seleniumhq.selenium</groupId>
+			  <artifactId>selenium-opera-driver</artifactId>
+			  <version>${selenium.version}</version>
+			</dependency>
+			<dependency>
+			  <groupId>org.seleniumhq.selenium</groupId>
+			  <artifactId>selenium-remote-driver</artifactId>
+			  <version>${selenium.version}</version>
+			</dependency>
+			<dependency>
+			  <groupId>org.seleniumhq.selenium</groupId>
+			  <artifactId>selenium-safari-driver</artifactId>
+			  <version>${selenium.version}</version>
+			</dependency>
+			<dependency>
+			  <groupId>org.seleniumhq.selenium</groupId>
+			  <artifactId>selenium-support</artifactId>
+			  <version>${selenium.version}</version>
+			</dependency>
+			<dependency>
+			    <groupId>org.seleniumhq.selenium</groupId>
+			    <artifactId>selenium-server</artifactId>
+			  <version>${selenium.version}</version>
+			</dependency>
         </dependencies>
     </dependencyManagement>
 
