入札モニター

--- a/pom.xml
+++ b/pom.xml
@@ -257,11 +257,11 @@
 			  <artifactId>selenium-support</artifactId>
 			  <version>${selenium.version}</version>
 			</dependency>
-			<dependency>
-			    <groupId>org.seleniumhq.selenium</groupId>
-			    <artifactId>selenium-server</artifactId>
-			  <version>${selenium.version}</version>
-			</dependency>
+<!-- 			<dependency> -->
+<!-- 			    <groupId>org.seleniumhq.selenium</groupId> -->
+<!-- 			    <artifactId>selenium-server</artifactId> -->
+<!-- 			  <version>${selenium.version}</version> -->
+<!-- 			</dependency> -->
         </dependencies>
     </dependencyManagement>
 
