--- a/ruoyi-aucper/pom.xml
+++ b/ruoyi-aucper/pom.xml
@@ -73,6 +73,7 @@
 			<dependency>
 			    <groupId>org.seleniumhq.selenium</groupId>
 			    <artifactId>selenium-server</artifactId>
+			    <version>3.141.59</version>
 			</dependency>
     </dependencies>
 
