--- a/ruoyi-aucper/src/main/resources/yahoo_auction.conf
+++ b/ruoyi-aucper/src/main/resources/yahoo_auction.conf
@@ -2,3 +2,6 @@
 
 #yahooオークション Base URL
 base.url=https://page.auctions.yahoo.co.jp/jp/auction/
+
+#yahooオークション Login URL
+login.url=https://login.yahoo.co.jp/config/login
