properties関連の改善

--- a/ruoyi-admin/pom.xml
+++ b/ruoyi-admin/pom.xml
@@ -94,6 +94,16 @@
                     <warName>${project.artifactId}</warName>
                 </configuration>
            </plugin>
+            <!-- configure JAR build -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <configuration>
+                    <excludes>
+                        <exclude>**/*.yml</exclude>
+                    </excludes>
+                </configuration>
+            </plugin>
         </plugins>
         <finalName>${project.artifactId}</finalName>
     </build>
