--- a/ruoyi-aucper/pom.xml
+++ b/ruoyi-aucper/pom.xml
@@ -77,4 +77,19 @@
 			</dependency>
     </dependencies>
 
+    <build>
+        <plugins>
+            <!-- configure JAR build -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <configuration>
+                    <excludes>
+                        <exclude>**/*.json</exclude>
+                        <exclude>**/*.yml</exclude>
+                    </excludes>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
