--- a/ruoyi-aucper/src/main/resources/application-selene.yml
+++ b/ruoyi-aucper/src/main/resources/application-selene.yml
@@ -1,6 +1,7 @@
 ### selene関連情報定義 ###
 selene:
   webdriver:
+    use-external: false
     chrome: C:/pleiades/workspace_aucper/RuoYi-Vue/ruoyi-aucper/webdrivers/chromedriver.exe
     gecko: C:/pleiades/workspace_aucper/RuoYi-Vue/ruoyi-aucper/webdrivers/geckodriver.exe
   pool:
