--- a/ruoyi-aucper/src/main/resources/nodeConfig.json
+++ b/ruoyi-aucper/src/main/resources/nodeConfig.json
@@ -9,7 +9,8 @@
     {
       "browserName": "chrome",
       "maxInstances": 5,
-      "seleniumProtocol": "WebDriver"
+      "seleniumProtocol": "WebDriver",
+      "platform": "WINDOWS"
     }
   ],
   "cleanUpCycle":2000,
