--- a/ruoyi-aucper/pom.xml
+++ b/ruoyi-aucper/pom.xml
@@ -75,6 +75,13 @@
 			    <artifactId>selenium-server</artifactId>
 			    <version>3.141.59</version>
 			</dependency>
+			<dependency>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>
+					spring-boot-configuration-processor
+				</artifactId>
+				<optional>true</optional>
+			</dependency>
     </dependencies>
 
     <build>
